[package]
name = "bevy_levy"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
accesskit = "0.17.1"
# features = ["dynamic_linking"]
bevy = { version = "0.15.0" , features = ["dynamic_linking"]}
bevy-inspector-egui = "0.28.1"
bevy_dev_tools = "0.15.0"
bevy_framepace = "0.18.0"
bevy_light_2d = "0.5.0"
bevy_reflect = "0.15.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
